--- a/board.yaml
+++ b/board.yaml
@@ -42,3 +42,31 @@ components:
   x: 14
   y: 8
   rotation: 0
+jumpers:
+- id: '0'
+  net: VCC
+  a:
+  - 0
+  - 9
+  b:
+  - 21
+  - 0
+  color: '#ff0000'
+- id: '1'
+  net: GND
+  a:
+  - 11
+  - 9
+  b:
+  - 20
+  - 0
+  color: '#0000ff'
+- id: '2'
+  net: SDA
+  a:
+  - 11
+  - 5
+  b:
+  - 23
+  - 0
+  color: '#ffffff'
